# prediction-market-calibration

./: .gitignore  CITATION.cff  DATA_SNAPSHOT_NOTE.md  Makefile  README.md  pyproject.toml  reproduce.ps1
scripts/: collect_calibration_model_data.py  create_unified_polymarket.py  generate_figures.py  run_bayesian.py  run_bayesian_decomp.py  run_cross_platform.py  run_kalshi.py  run_revision_diagnostics.py  run_robustness.py
src/: __init__.py  bayesian.py  calibration.py  classify.py  config.py  pipeline.py  plotting.py
supplementary/: appendix_d_simpsons_paradox.csv  appendix_d_subcategory_slopes.csv  calibration_matrix_216.csv  cross_platform_comparison_time.csv  domain_classification_rules.md  supplementary_material.tex  supplementary_material_blinded.tex
tests/: test_imports.py
