[project]
name = "prediction-market-calibration"
version = "1.0.0"
description = "Replication code for 'Calibration of Prediction Markets: A Microstructure Analysis'"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "duckdb>=0.9",
    "matplotlib>=3.5",
    "pytz>=2023.3",
    "numpyro>=0.13",
    "jax>=0.4",
    "jaxlib>=0.4",
    "arviz>=0.15",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
